--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,2 +1,19 @@
-<h1>Reviews#index</h1>
-<p>Find me in app/views/reviews/index.html.erb</p>
+<%= stylesheet_link_tag 'top_list' %>
+<%= render 'layouts/jumbotron' %>
+<div class="container" style="background-color:#f5f5f5;">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item active" aria-current="page">トップ</li>
+    </ol>
+  </nav>
+  <div class="row no-gutters">
+    <div class="col-md-8 align-self-center" style="background-color:#e6e6e6;">
+      <%= render 'reviews/toplist', reviews: @reviews %>
+    </div>
+    <div class="col-md-4" style="background-color:#e6e6e6;">
+      <!--       <div class="row"> -->
+        <%= render 'layouts/search_form' %>
+        <%= render 'reviews/random', randreviews: @randreviews %>
+      </div>
+    </div>
+</div>
