--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,46 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+       <%= form_for @user do |f| %>
+       <% if @user.errors.any? %>
+       <%= @user.errors.count %>errors
+       <ul>
+        <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+      </ul>
+      <% end %>
+      <div class="card bg-info" >
+        <article class="card-body">
+          <h4 class="card-title text-center mb-4 mt-1">ユーザー編集</h4>
+          <hr>
+          <p class="text-dark text-center">ユーザー編集画面</p>
+          <div class="form-group p-1 m-1">
+            <div class="input-group p-1 m-1">
+              <%= f.label :name %><span class="badge badge-danger p-1 m-1">入力してください</span><br/>
+            </div>
+            <%= f.text_field :name, autofocus: true ,class: "form-control name"%>
+          </div>
+          <div class="form-group p-1 m-1">
+            <div class="input-group p-1 m-1">
+              <%= f.label :image %>
+            </div>
+            <%= f.attachment_field :profile_image_id ,class: "user_image" %>
+          </div>
+          <div class="form-group p-1 m-1">
+            <div class="input-group p-1 m-1">
+              <%= f.label :introduction %><br />
+            </div>
+            <%= f.text_area :introduction, autofocus: true ,class: "form-control introduction"%>
+          </div>
+          <div class="form-group">
+            <div class="input-group p-1 m-1">
+              <%= f.submit "更新", class: "btn btn-primary" %>
+            </div>
+          </div>
+          <% end %>
+        </article>
+      </div>
+    </div>
+  </div>
+</div>
