--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class="container">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><%= link_to 'トップ', root_path %></li>
+      <li class="breadcrumb-item active" aria-current="page">ユーザー一覧</li>
+    </ol>
+  </nav>
+  <div class="row">
+
+
+    <div class="col-md-4" style="background-color:#f5f5f5;">
+      <!--       <div class="row"> -->
+    <%= render 'layouts/search_form' %>
+    </div>
+  </div>
+</div>
