--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,3 +1,4 @@
+<%= form_with(model: review, local: true) do |form| %>
 <div class="form-group p-1 m-1">
   <div class="input-group p-1 m-1">
     <%= form.label :image %>
