--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -11,9 +11,13 @@
     <div class="row">
       <div class="col-md-8">
         <%= render 'review',{review: @review} %>
-    </div>
-    <div class="col-md-4">
+        <table class="show-tb comment_<%= @review.id %> mt-2">
+         <td>コメント数：<%= @review.mreview_comments.count %></td>
+         <%= render 'comment', review_comments: @review.review_comments %>
+       </table>
+      </div>
+      <div class="col-md-4">
       <%= render 'users/info',{user: @user} %>
+      </div>
     </div>
-  </div>
 </div>
