--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -12,7 +12,7 @@
       <div class="col-md-8">
         <%= render 'review',{review: @review} %>
         <table class="show-tb comment_<%= @review.id %> mt-2">
-         <td>コメント数：<%= @review.mreview_comments.count %></td>
+         <td>コメント数：<%= @review.review_comments.count %></td>
          <%= render 'comment', review_comments: @review.review_comments %>
        </table>
       </div>
