--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -3,7 +3,7 @@
   <div class="input-group p-1 m-1">
     <%= form.label :image %>
   </div>
-  <%= form.attachment_field :image_id ,class: "music_image" %>
+  <%= form.attachment_field :review_image ,class: "review_image" %>
 </div>
 
 <div class="form-group p-1 m-1">
