--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,6 +1,6 @@
 <p>
   <strong>ウイスキーの画像:</strong>
-  <%= attachment_image_tag review, :image, :fill, 100, 100, format:'jpeg', class: "pull-left ", fallback: "no_image.png", size:'100x100'  %>
+  <%= attachment_image_tag review, :review_image, :fill, 100, 100, format:'jpeg', class: "pull-left review_image_id", fallback: "no_image.png", size:'100x100'  %>
 </p>
 
 <p>
